--- a/English10Mins/package.json
+++ b/English10Mins/package.json
@@ -18,6 +18,7 @@
     "react-native-loading-spinner-overlay": "1.1.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.5.0",
+    "react-native-sound": "0.11.0",
     "react-navigation": "4.3.7",
     "react-navigation-stack": "2.3.12"
   },
