--- a/English10Mins/package.json
+++ b/English10Mins/package.json
@@ -14,6 +14,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "1.6.1",
+    "react-native-image-header-scroll-view": "0.10.3",
     "react-native-ionicons": "5.0.0-rc",
     "react-native-loading-spinner-overlay": "1.1.0",
     "react-native-safe-area-context": "0.7.3",
