--- a/English10Mins/ios/Podfile
+++ b/English10Mins/ios/Podfile
@@ -87,6 +87,8 @@ target 'English10Mins' do
 
   pod 'RNSound', :path => '../node_modules/react-native-sound'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'English10MinsTests' do
     inherit! :complete
     # Pods for testing
