--- a/English10Mins/package.json
+++ b/English10Mins/package.json
@@ -13,10 +13,12 @@
     "@react-native-community/masked-view": "0.1.9",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-fs": "2.16.6",
     "react-native-gesture-handler": "1.6.1",
     "react-native-image-header-scroll-view": "0.10.3",
     "react-native-ionicons": "5.0.0-rc",
     "react-native-loading-spinner-overlay": "1.1.0",
+    "react-native-root-toast": "3.2.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.5.0",
     "react-native-sound": "0.11.0",
