--- a/English10Mins/package.json
+++ b/English10Mins/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.62.2",
     "react-native-fs": "2.16.6",
     "react-native-gesture-handler": "1.6.1",
+    "react-native-htmlview": "0.15.0",
     "react-native-image-header-scroll-view": "0.10.3",
     "react-native-ionicons": "5.0.0-rc",
     "react-native-loading-spinner-overlay": "1.1.0",
