--- a/English10Mins/android/settings.gradle
+++ b/English10Mins/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'English10Mins'
+include ':@react-native-community_masked-view'
+project(':@react-native-community_masked-view').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/masked-view/android')
 include ':react-native-fs'
 project(':react-native-fs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fs/android')
 include ':react-native-sound'
