--- a/English10Mins/ios/Podfile
+++ b/English10Mins/ios/Podfile
@@ -91,6 +91,9 @@ target 'English10Mins' do
 
 
 
+
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
   target 'English10MinsTests' do
     inherit! :complete
     # Pods for testing
