--- a/English10Mins/package.json
+++ b/English10Mins/package.json
@@ -14,6 +14,7 @@
     "axios": "0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-device-info": "5.5.7",
     "react-native-fs": "2.16.6",
     "react-native-gesture-handler": "1.6.1",
     "react-native-htmlview": "0.15.0",
