--- a/English10Mins/package.json
+++ b/English10Mins/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "English10Mins",
-  "version": "0.0.1",
+  "name": "Alvin",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
