--- a/English10Mins/android/app/build.gradle
+++ b/English10Mins/android/app/build.gradle
@@ -133,8 +133,14 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
+		
+		 ndk {
+            abiFilters "armeabi-v7a", "x86"
+       }
+		
     }
+
     splits {
         abi {
             reset()
@@ -143,14 +149,24 @@ android {
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
+	
     signingConfigs {
+	
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+		
+		release {
+            storeFile file('fartav-release-key.keystore')
+            storePassword 'Fartav123@456'
+            keyAlias 'fartav-key-alias'
+            keyPassword 'Fartav123@456'
+        }
     }
+	
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -158,9 +174,10 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+			
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+			signingConfig signingConfigs.release
         }
     }
 
