--- a/English10Mins/package.json
+++ b/English10Mins/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@dudigital/react-native-zoomable-view": "1.0.15",
     "@react-native-community/masked-view": "0.1.10",
     "axios": "0.19.2",
     "react": "16.11.0",
